# Azure-Entitlements-Importer

./: README.md  cli.py  pyproject.toml
