[project]
name = "az-entitlement-exporter"
version = "0.1.0"
description = "Export Azure Entra Access Packages and generate Terraform configurations"
authors = [{ name = "Piyush Sahay" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
      "click",
        "requests",
          "msal"
]

[project.scripts]
az-entitlement-exporter = "az_entitlement_exporter.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
]